--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
     "dependencies": {
-        "@project-serum/anchor": "^0.24.2"
+        "@project-serum/anchor": "^0.24.2",
+        "cross-spawn": "^7.0.3"
     },
     "devDependencies": {
+        "@types/chai": "^4.3.0",
+        "@types/mocha": "^9.0.0",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
         "ts-mocha": "^8.0.0",
-        "@types/chai": "^4.3.0",
-        "@types/mocha": "^9.0.0",
         "typescript": "^4.3.5"
-    }
+    },
+    "scripts": {
+        "deploy": "node deploy.js"
+    },
+    "type": "module"
 }
